add more map config options
